--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": ">=7.3"
+    },
+    "require-dev": {
         "laravel/framework": ">=6.0",
         "laravel/nova": "~3.0"
     },
